--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -3,10 +3,10 @@ name: Containers
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
     types: [opened, synchronize]
 
 permissions:
